# compneuro-atrophymapping

./: .gitignore  README.md  pyproject.toml
resources/: .$flow_diagram_atrophy_mapping.drawio.bkp  flow_diagram_atrophy_mapping.drawio
src/compneuro_atrophy_mapping/: atrophy_map_pipeline.py  binarize_wmaps.py  filter_clusters.py  processing.py  utils.py
src/compneuro_atrophy_mapping/data/: __init__.py
